[gd_scene load_steps=8 format=3 uid="uid://cq56hcu2wn2y7"]

[ext_resource type="Script" path="res://scenes/entities/actor/actor.gd" id="1_de4j8"]
[ext_resource type="PackedScene" uid="uid://c757mb1y2lc8g" path="res://scenes/components/hurt_box/hurt_box.tscn" id="2_eofpl"]
[ext_resource type="Script" path="res://scripts/components/actor_debug_info.gd" id="3_ddju0"]
[ext_resource type="PackedScene" uid="uid://d4iye4ok3dni7" path="res://scenes/components/target_finder/target_finder.tscn" id="4_ey4kp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pdl0k"]
resource_local_to_scene = true
radius = 4.0
height = 12.0

[sub_resource type="SpriteFrames" id="SpriteFrames_rlvhe"]

[sub_resource type="LabelSettings" id="LabelSettings_dcwuh"]
font_size = 8

[node name="Actor" type="CharacterBody2D" groups=["actor"]]
position = Vector2(1, -3)
collision_layer = 2
collision_mask = 3
motion_mode = 1
slide_on_ceiling = false
floor_stop_on_slope = false
safe_margin = 0.1
script = ExtResource("1_de4j8")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_pdl0k")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 5.0
path_max_distance = 200.0
avoidance_enabled = true
radius = 6.0
neighbor_distance = 80.0
debug_use_custom = true
debug_path_custom_color = Color(0.521569, 0.690196, 0, 0.482353)
debug_path_custom_line_width = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rlvhe")

[node name="HurtBox" parent="." instance=ExtResource("2_eofpl")]
position = Vector2(-1.90735e-06, 2)
scale = Vector2(-0.194719, 0.263765)
collision_layer = 0
collision_mask = 4
monitoring = false

[node name="DebugInfo" type="Label" parent="."]
process_mode = 4
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_dcwuh")
script = ExtResource("3_ddju0")

[node name="TargetFinder" parent="." instance=ExtResource("4_ey4kp")]

[node name="TargetRefreshTimer" type="Timer" parent="."]
editor_description = "Time until next target refresh. "
one_shot = true
autostart = true

[node name="CastTimer" type="Timer" parent="."]
editor_description = "Time left casting the attack. "
one_shot = true
